# mpsc-channel

./: Cargo.toml  README.md
src/: errors.rs  lib.rs  main.rs  message.rs  util_chan.rs
src/channel/: linked_list.rs  mod.rs  mspc_channel.rs
src/tests/: mod.rs  test.rs
